modify background image after each countdown
added setBackgroundImage method to modify background image after countdown ends.
add image names to array to set images as background image.

--- a/countdown.css
+++ b/countdown.css
@@ -340,3 +340,12 @@ h3 {
 	right:0;
 	color:white;
 }
+
+.background-container img
+{
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	opacity: 0.6;
+}
