reduce background image size

--- a/countdown.css
+++ b/countdown.css
@@ -341,11 +341,17 @@ h3 {
 	color:white;
 }
 
+.background-container 
+{
+	height: 250px;
+	width: 250px;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+
 .background-container img
 {
 	height: 100%;
 	width: 100%;
-	position: absolute;
-	top: 0;
-	opacity: 0.6;
 }
